--- a/app/src/main/res/layout/fragment_add_events.xml
+++ b/app/src/main/res/layout/fragment_add_events.xml
@@ -1,14 +1,14 @@
 <RelativeLayout
-    android:id="@+id/add_places_tab"
+    android:id="@+id/add_event_tab"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragments.AddPlaces">
+    tools:context=".fragments.AddEvents">
 
     <ListView
-        android:id="@+id/places_listview"
+        android:id="@+id/event_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
