--- a/app/src/main/res/layout/fragment_sbdialog.xml
+++ b/app/src/main/res/layout/fragment_sbdialog.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:theme="@styles/Headers"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:text="@string/dialog_instructions"
