--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,6 +41,7 @@
     <style name="Dialog" parent="StoryBuilderTheme">
         <item name="android:textSize">14sp</item>
         <item name="android:background">@color/primary</item>
+        <item name="android:padding">10dp</item>
         <item name="android:layout_marginLeft">5dp</item>
         <item name="android:layout_marginRight">5dp</item>
     </style>
@@ -53,5 +54,9 @@
         <item name="android:textAlignment">center</item>
     </style>
 
+    <style name="fab_labels_style" parent="StoryBuilderTheme">
+        <item name="android:background">@drawable/fab_label_background</item>
+        <item name="android:textColor">@color/primary_text_light</item>
+    </style>
 
 </resources>
