--- a/app/src/main/res/layout/activity_create_story.xml
+++ b/app/src/main/res/layout/activity_create_story.xml
@@ -3,6 +3,7 @@
     android:id="@+id/story_creation_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -20,8 +21,7 @@
             android:id="@+id/story_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawablePadding="5dp"
-            android:drawableStart="@drawable/ic_story" />
+            android:drawablePadding="5dp" />
     </LinearLayout>
 
     <android.support.design.widget.TabLayout
@@ -38,6 +38,7 @@
 
     <com.getbase.floatingactionbutton.FloatingActionsMenu
         android:id="@+id/fab"
+        fab:fab_labelStyle="@style/fab_labels_style"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="16dp"
@@ -47,23 +48,26 @@
 
         <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/characters"
+            android:theme="@style/fab_labels_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:title="@string/add_character"
+            fab:fab_title="@string/add_character"
             android:clickable="true" />
 
         <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/places"
+            android:id="@+id/locations"
+            android:theme="@style/fab_labels_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:title="@string/add_place"
+            fab:fab_title="@string/add_location"
             android:clickable="true" />
 
         <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/events"
+            android:theme="@style/fab_labels_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:title="@string/add_event"
+            fab:fab_title="@string/add_event"
             android:clickable="true" />
     </com.getbase.floatingactionbutton.FloatingActionsMenu>
 </RelativeLayout>
