--- a/app/src/main/res/layout/activity_create_story.xml
+++ b/app/src/main/res/layout/activity_create_story.xml
@@ -38,7 +38,7 @@
 
     <com.getbase.floatingactionbutton.FloatingActionsMenu
         android:id="@+id/fab"
-        fab:fab_labelStyle="@style/fab_labels_style"
+        fab:fab_labelStyle="@style/Fab"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="16dp"
@@ -48,7 +48,7 @@
 
         <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/characters"
-            android:theme="@style/fab_labels_style"
+            android:theme="@style/Fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             fab:fab_title="@string/add_character"
@@ -56,7 +56,7 @@
 
         <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/locations"
-            android:theme="@style/fab_labels_style"
+            android:theme="@style/Fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             fab:fab_title="@string/add_location"
@@ -64,7 +64,7 @@
 
         <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/events"
-            android:theme="@style/fab_labels_style"
+            android:theme="@style/Fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             fab:fab_title="@string/add_event"
