Start setting up search

--- a/app/src/main/res/menu/menu_story_builder_main.xml
+++ b/app/src/main/res/menu/menu_story_builder_main.xml
@@ -12,5 +12,6 @@
         android:title="Search"
         android:orderInCategory="200"
         android:icon="@drawable/ic_search"
-        app:showAsAction="always" />
+        android:actionViewClass="android.widget.SearchView"
+        app:showAsAction="collapseActionView|ifRoom" />
 </menu>
