--- a/app/src/main/res/menu/menu_story_builder_main.xml
+++ b/app/src/main/res/menu/menu_story_builder_main.xml
@@ -12,6 +12,6 @@
         android:title="Search"
         android:orderInCategory="200"
         android:icon="@drawable/ic_search"
-        android:actionViewClass="android.widget.SearchView"
-        app:showAsAction="collapseActionView|ifRoom" />
+        app:showAsAction="collapseActionView|ifRoom"
+        app:actionViewClass="android.support.v7.widget.SearchView" />
 </menu>
