--- a/app/src/main/res/layout/activity_story_builder_main.xml
+++ b/app/src/main/res/layout/activity_story_builder_main.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/quote"
-        android:theme="@style/Headers"
+        android:theme="@style/Quotes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
