--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,14 @@
         <item name="actionModeBackground">@color/primary</item>
     </style>
 
+    <style name="Quotes" parent="StoryBuilderTheme">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/primary_text_light</item>
+        <item name="android:background">@color/accent</item>
+        <item name="android:padding">20dp</item>
+        <item name="android:gravity">center</item>
+    </style>
+
     <style name="Headers" parent="StoryBuilderTheme">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/primary_text_light</item>
@@ -17,7 +25,6 @@
     </style>
 
     <style name="Empty" parent="StoryBuilderTheme">
-        <item name="android:capitalize">characters</item>
         <item name="android:textSize">24sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/primary_text</item>
@@ -46,6 +53,13 @@
         <item name="android:layout_marginRight">5dp</item>
     </style>
 
+    <style name="TextView" parent="StoryBuilderTheme">
+        <item name="android:textSize">14sp</item>
+        <item name="android:background">@color/primary_header</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:gravity">center_horizontal</item>
+    </style>
+
     <style name="Tabs" parent="StoryBuilderTheme">
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/primary_text_light</item>
@@ -56,6 +70,11 @@
 
     <style name="Fab" parent="StoryBuilderTheme">
         <item name="android:background">@drawable/fab_label_background</item>
+        <item name="android:textColor">@color/primary_text_light</item>
+    </style>
+
+    <style name="FabChildren" parent="StoryBuilderTheme">
+        <item name="android:background">@color/accent</item>
         <item name="android:textColor">@color/primary_text_light</item>
     </style>
 
