--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -30,29 +30,44 @@
         android:id="@+id/sb_event_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/activity_add_event_top"
-        android:hint="@string/event_title" />
+        android:hint="@string/event_title"
+        android:layout_below="@id/activity_add_event_top" />
 
     <EditText
         android:id="@+id/sb_event"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/sb_event_name"
-        android:hint="@string/event_desc" />
+        android:hint="@string/event_desc"
+        android:layout_below="@+id/sb_event_name" />
+
+    <EditText
+        android:id="@+id/sb_event_characters"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/event_characters"
+        android:layout_below="@+id/sb_event" />
+
+    <EditText
+        android:id="@+id/sb_event_summary"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/event_summary"
+        android:layout_below="@+id/sb_event_characters" />
 
     <EditText
         android:id="@+id/sb_event_notes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/sb_event"
-        android:hint="@string/event_notes" />
+        android:hint="@string/event_notes"
+        android:layout_below="@id/sb_event_summary" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_below="@id/sb_event_notes"
-        android:gravity="end|bottom">
+        android:gravity="end|bottom"
+        android:background="@color/white"
+        android:layout_alignParentBottom="true">
 
         <Button
             android:id="@+id/event_cancel"
@@ -66,7 +81,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="?android:attr/borderlessButtonStyle"
-            android:text="@string/event_add" />
+            android:text="@string/OK" />
     </LinearLayout>
 
 </RelativeLayout>
