--- a/app/src/main/res/layout/activity_add_character.xml
+++ b/app/src/main/res/layout/activity_add_character.xml
@@ -1,179 +1,183 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/add_character"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
+    android:padding="20dp"
     tools:context="tahastudio.storybuilder.ShowStory">
 
-    <RelativeLayout
-        android:padding="20dp"
-        android:background="@color/white"
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
-            android:id="@+id/activity_add_character_top"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/add_character_instructions"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:drawableStart="@drawable/ic_character"
-                android:text="@string/character_instructions" />
-        </LinearLayout>
+        android:layout_height="match_parent">
 
         <RelativeLayout
-            android:id="@+id/add_character_position"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:layout_below="@id/activity_add_character_top">
-
-            <RadioButton
-                android:id="@+id/sb_character_main"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/character_protagonist"
-                android:onClick="mCharacterCheckbox" />
-
-            <RadioButton
-                android:id="@+id/sb_character_antagonist"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:text="@string/character_antagonist"
-                android:onClick="mCharacterCheckbox"
-                android:layout_toEndOf="@id/sb_character_main" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/add_character_details"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/add_character_position">
-
-            <EditText
-                android:id="@+id/sb_character_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="@string/character_name" />
-
-            <EditText
-                android:id="@+id/sb_character_age"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="@string/character_age"
-                android:layout_alignParentEnd="true" />
-        </RelativeLayout>
-
-        <LinearLayout
-            android:id="@+id/gender"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_horizontal"
-            android:layout_below="@id/add_character_details">
-
-            <RadioButton
-                android:id="@+id/male_gender"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/character_male"
-                android:onClick="characterGender"/>
-
-            <RadioButton
-                android:id="@+id/female_gender"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/character_female"
-                android:onClick="characterGender"/>
-
-            <RadioButton
-                android:id="@+id/other_gender"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/character_other"
-                android:onClick="characterGender"/>
-        </LinearLayout>
-
-        <EditText
-            android:id="@+id/sb_character_birthplace"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/character_birth"
-            android:layout_below="@id/gender"/>
-
-        <EditText
-            android:id="@+id/sb_character_history"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/character_history"
-            android:layout_below="@id/sb_character_birthplace" />
-
-        <EditText
-            android:id="@+id/sb_character_goals"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/character_goals"
-            android:layout_below="@id/sb_character_history" />
-
-        <EditText
-            android:id="@+id/sb_character_conflicts"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/character_conflicts"
-            android:layout_below="@id/sb_character_goals" />
-
-        <EditText
-            android:id="@+id/sb_character_epiphany"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/character_epiphany"
-            android:layout_below="@id/sb_character_conflicts" />
-
-        <EditText
-            android:id="@+id/sb_character_personality"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/character_personality"
-            android:layout_below="@id/sb_character_epiphany"/>
-
-        <EditText
-            android:id="@+id/sb_character_notes"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/character_notes"
-            android:layout_below="@id/sb_character_personality"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="bottom|end"
             android:background="@color/white"
-            android:layout_alignParentBottom="true">
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-            <Button
-                android:id="@+id/character_cancel"
+            <LinearLayout
+                android:id="@+id/activity_add_character_top"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/add_character_instructions"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableStart="@drawable/ic_character"
+                    android:text="@string/character_instructions" />
+            </LinearLayout>
+
+            <RelativeLayout
+                android:id="@+id/add_character_position"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:layout_below="@id/activity_add_character_top">
+
+                <RadioButton
+                    android:id="@+id/sb_character_main"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/character_protagonist"
+                    android:onClick="mCharacterCheckbox" />
+
+                <RadioButton
+                    android:id="@+id/sb_character_antagonist"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:text="@string/character_antagonist"
+                    android:onClick="mCharacterCheckbox"
+                    android:layout_toEndOf="@id/sb_character_main" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/add_character_details"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/add_character_position">
+
+                <EditText
+                    android:id="@+id/sb_character_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/character_name" />
+
+                <EditText
+                    android:id="@+id/sb_character_age"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/character_age"
+                    android:layout_alignParentEnd="true" />
+            </RelativeLayout>
+
+            <LinearLayout
+                android:id="@+id/gender"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_horizontal"
+                android:layout_below="@id/add_character_details">
+
+                <RadioButton
+                    android:id="@+id/male_gender"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/character_male"
+                    android:onClick="characterGender"/>
+
+                <RadioButton
+                    android:id="@+id/female_gender"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/character_female"
+                    android:onClick="characterGender"/>
+
+                <RadioButton
+                    android:id="@+id/other_gender"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/character_other"
+                    android:onClick="characterGender"/>
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/sb_character_birthplace"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="?android:attr/borderlessButtonStyle"
-                android:text="@string/cancel" />
+                android:hint="@string/character_birth"
+                android:layout_below="@id/gender"/>
 
-            <Button
-                android:id="@+id/add_the_character"
+            <EditText
+                android:id="@+id/sb_character_history"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="?android:attr/borderlessButtonStyle"
-                android:text="@string/OK" />
-        </LinearLayout>
-    </RelativeLayout>
-</ScrollView>
+                android:hint="@string/character_history"
+                android:layout_below="@id/sb_character_birthplace" />
+
+            <EditText
+                android:id="@+id/sb_character_goals"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/character_goals"
+                android:layout_below="@id/sb_character_history" />
+
+            <EditText
+                android:id="@+id/sb_character_conflicts"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/character_conflicts"
+                android:layout_below="@id/sb_character_goals" />
+
+            <EditText
+                android:id="@+id/sb_character_epiphany"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/character_epiphany"
+                android:layout_below="@id/sb_character_conflicts" />
+
+            <EditText
+                android:id="@+id/sb_character_personality"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/character_personality"
+                android:layout_below="@id/sb_character_epiphany"/>
+
+            <EditText
+                android:id="@+id/sb_character_notes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/character_notes"
+                android:layout_below="@id/sb_character_personality"/>
+        </RelativeLayout>
+    </ScrollView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="bottom|end"
+        android:background="@color/white"
+        android:layout_alignParentBottom="true">
+
+        <Button
+            android:id="@+id/character_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="?android:attr/borderlessButtonStyle"
+            android:text="@string/cancel" />
+
+        <Button
+            android:id="@+id/add_the_character"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="?android:attr/borderlessButtonStyle"
+            android:text="@string/OK" />
+    </LinearLayout>
+</RelativeLayout>
