--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -61,11 +61,14 @@
     </style>
 
     <style name="Tabs" parent="StoryBuilderTheme">
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/primary_text_light</item>
         <item name="android:background">@color/accent</item>
-        <item name="android:padding">10dp</item>
+        <item name="android:padding">8dp</item>
         <item name="android:textAlignment">center</item>
+        <item name="android:tabStripEnabled">true</item>
+        <item name="android:tabStripLeft">@color/primary_dark</item>
+        <item name="android:tabStripRight">@color/primary_dark</item>
     </style>
 
     <style name="Fab" parent="StoryBuilderTheme">
